--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     <section id="beginning" class="beginning">
       <img src="./img/main/water-blur.png" alt="" class="water-blur" />
       <div class="beginning-wrapper">
+        <img src="./img/waterway/waterway-blur-black.svg" alt="" class="begining-blur">
         <div class="beginning-container">
           <img class="beginning-background" src="./img/beginning/background.png" alt="" />
           <img src="./img/team/bubbles1.png" alt="" class="bubbles bubbles1" />
@@ -139,6 +140,7 @@
 
     <div class="fade-wrapper">
       <section id="mintwaterway">
+
         <div id="mint-waterway-wrap">
           <div class="mint-test">
             <section id="mint">
@@ -163,17 +165,13 @@
                       <source src="./img/mint/axolotl_placeholder.mp4" tupe="video/mp4">
                     </video>
                     <img src="./img/mint/axolotl_placeholder-blur.svg" alt="" class="circle-blur" />
-                    <!-- <img
-                        src="/img/mint/crocodile.png"
-                        alt=""
-                        class="character"
-                      /> -->
                   </div>
                 </div>
               </div>
             </section>
 
             <section id="waterway">
+              <img src="./img/waterway/waterway-blur-black.svg" alt="" class="mintwaterway-blur">
               <img id="waterway-bg" src="/img/waterway/waterway-bg.jpg" alt="" />
               <img id="waterway-blur" src="/img/waterway/waterway-blur.jpg" alt="" />
               <div class="container">
@@ -194,8 +192,8 @@
                   <a href="#waterway-text-4" class="waterway-tab">Forging</a>
                 </div>
                 <div class="waterway-texts">
-                  <span class="hidden-title"><span class="waterway-maintitle">Waterway</span>Season
-                    1</span>
+                  <!-- <span class="hidden-title"><span class="waterway-maintitle">Waterway</span>Season
+                    1</span> -->
                   <div id="waterway-text-1">
                     <h4 class="waterway-title">
                       <span class="text-accent">5,000 Superlotls</span> Hatching</br>Q1 2023
