--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </p>
         </div>
         <h1 class="main-title">
-          <span>Superlotl by Inkbox</span>
+          <span>Superlotls by Inkbox</span>
         </h1>
         <h2 class="main-subtitle">
           Built by the world leader <br> in semi-permanent tattoos and self
