--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                   </p>
                 </div>
                 <button class="btn">Mint</button>
-                <img src="/img/mint/mint-bg.png" alt="" class="bg" />
+                <img src="./img/mint/mint-bg.png" alt="" class="bg" />
 
                 <div class="anime-circle">
                   <div class="wrapper-circle">
@@ -172,8 +172,8 @@
 
             <section id="waterway">
               <img src="./img/waterway/waterway-blur-black.svg" alt="" class="mintwaterway-blur">
-              <img id="waterway-bg" src="/img/waterway/waterway-bg.jpg" alt="" />
-              <img id="waterway-blur" src="/img/waterway/waterway-blur.jpg" alt="" />
+              <img id="waterway-bg" src="./img/waterway/waterway-bg.jpg" alt="" />
+              <img id="waterway-blur" src="./img/waterway/waterway-blur.jpg" alt="" />
               <div class="container">
                 <div class="waterway-tabs">
                   <div class="waterway-buble">
@@ -450,19 +450,19 @@
               <span class="f-main-title">The</span>
             </div>
             <div class="join-bot">
-              <img src="/img/footer/footer-arrow.svg" alt="" />
+              <img src="./img/footer/footer-arrow.svg" alt="" />
               <span class="f-main-title">Superherd</span>
             </div>
 
             <div class="socials">
               <a href="#" class="btn"><span>join</span>
-                <img src="/img/footer/discord-logo.svg" alt="" />
+                <img src="./img/footer/discord-logo.svg" alt="" />
                 <span>discord</span></a>
               <a href="#" class="btn"><span>join</span>
                 <img src="/img/footer/twitter-logo.svg" alt="" />
                 <span>twitter</span></a>
               <a href="#" class="btn"><span>join</span>
-                <img src="/img/footer/instagram-logo.svg" alt="" />
+                <img src="./img/footer/instagram-logo.svg" alt="" />
                 <span>instagram</span></a>
             </div>
             
@@ -473,7 +473,7 @@
               </div>
               <div class="powered">
                 <a href="https://www.niftables.com/" class="powered" target="_blank">
-                  <img src="/img/footer/poweredby.svg" alt="powered by niftables" />
+                  <img src="./img/footer/poweredby.svg" alt="powered by niftables" />
                 </a>
               </div>
             </div>
