--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                 <img src="./img/footer/discord-logo.svg" alt="" />
                 <span>discord</span></a>
               <a href="#" class="btn"><span>join</span>
-                <img src="/img/footer/twitter-logo.svg" alt="" />
+                <img src="./img/footer/twitter-logo.svg" alt="" />
                 <span>twitter</span></a>
               <a href="#" class="btn"><span>join</span>
                 <img src="./img/footer/instagram-logo.svg" alt="" />
@@ -483,7 +483,7 @@
       </footer>
     </div>
   </div>
-  <script src="/js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
