fix home pages + add 50% about pages

--- a/index.html
+++ b/index.html
@@ -24,32 +24,7 @@
       <img src="./img/main/right-smoke.png" alt="" class="right-smoke" />
       <div class="water"></div>
       <img src="./img/main/water-blur1.png" alt="" class="water-blur1" />
-      <div class="header">
-        <a href="/">
-          <img src="./img/main/header-logo.svg" alt="" class="header__logo" />
-        </a>
-        <div class="header__right-block">
-          <div class="header__nav">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">The Collection</a>
-            <a href="#">Mint</a>
-          </div>
-          <button class="header__button">
-            <div class="left-blok">
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
-            <div class="right-block">
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
-            <span>Sign in</span>
-          </button>
-        </div>
-      </div>
+
       <div class="main__container container">
         <div class="main-inbox">
           <p>
@@ -326,7 +301,18 @@
                   <div class="accordion-title">What is Inkbox?</div>
                   <div class="accordion-content">
                     Inkbox is the world leader in temporary tattoos and accessories, making us the ultimate
-                    self-expression tool. Learn more about us here.
+                    self-expression tool. Learn more about us here. *insert hyperlink to about us*
+                  </div>
+                </div>
+
+                <div class="accordion-item">
+                  <div class="accordion-title">
+                    What is an NFT?
+                  </div>
+                  <div class="accordion-content">
+                    An NFT is a Non-Fungible Token, which is a digital asset that is unique and
+                    cannot be replaced with something else. For example, think of a one-of-a-kind trading card or even a
+                    real-world piece of land, just in digital form.
                   </div>
                 </div>
 
@@ -335,8 +321,22 @@
                     Why is Inkbox making an NFT collection?
                   </div>
                   <div class="accordion-content">
-                    Inkbox is the world leader in temporary tattoos and accessories, making us the ultimate
-                    self-expression tool. Learn more about us here.
+                    Evolving Web2 to Web3, NFTs allow Inkbox to engage our community in ways
+                    that haven’t been possible in Web2, all while making real-world impact.
+                    Education is a core pillar of Superlotl, and we are excited to learn and grow in
+                    this space together!
+                  </div>
+                </div>
+
+                <div class="accordion-item">
+                  <div class="accordion-title">
+                    How do I buy my first NFT?
+                  </div>
+                  <div class="accordion-content">
+                    To mint (i.e. to buy) your Superlotl NFT, be sure to purchase only from our official
+                    Superlotl minting page *insert hyperlink to mint section*. Purchases can be
+                    completed directly via credit card in USD, or by connecting your wallet (you do
+                    not need an active wallet to purchase)
                   </div>
                 </div>
 
@@ -345,18 +345,60 @@
                     What is Superlotl and why is this collection important?
                   </div>
                   <div class="accordion-content">
-                    Inkbox is the world leader in temporary tattoos and accessories, making us the ultimate
-                    self-expression tool. Learn more about us here.
+                    Superlotl by Inkbox is a collection of 10,000 NFTs on the Ethereum blockchain which will
+                    be launched in two seasons of 5000. Superlotl is focused on giving back through
+                    charitable donations and providing value to our Superherd (community members)
+                    through our three reward categories - expression, purpose and forging. The main goal of
+                    the Superherd is to make a difference and give back. Join us as we Ink the Metaverse!
                   </div>
                 </div>
 
+
+                <div class="accordion-item">
+                  <div class="accordion-title">
+                    How does my Superlotl make super-impact?
+                  </div>
+                  <div class="accordion-content">
+                    Your Superlotl will hatch with one unique and powerful 1/1 tattoo design somewhere on
+                    the body of your character. This tattoo which will also be available for sale on <a
+                      href="inkbox.com">inkbox.com</a>
+                    as a real life temporary tattoo. The profits from all physical product sales (approximately
+                    15% of sales price), will be donated directly to a charity dedicated to cancer research or
+                    the environment. Joining the Superherd means not only being a part of a meaningful
+                    community, but also having IRL impact!
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion">
                 <div class="accordion-item">
                   <div class="accordion-title">
                     What are the three reward categories?
                   </div>
                   <div class="accordion-content">
-                    Inkbox is the world leader in temporary tattoos and accessories, making us the ultimate
-                    self-expression tool. Learn more about us here.
+                    The Superherd is all about feeling good and making a difference, and we can’t do it
+                    without you!
+                    1. Expression: Buy, sell, and collect up to 4 tattoos on your Superlotl. Visit pop up
+                    shops, events, and tattoo conventions centered around self-expression in the real world
+                    and the Metaverse. Superlotl holders get rewards when they visit!
+                    2. Purpose: Your Superlotl’s 1/1 design will be available for purchase as an IRL
+                    temporary tattoo on <a href="inkbox.com">inkbox.com</a>, with proceeds donated to charitable
+                    organizations with
+                    every sale.
+                    3. Forging: Test your luck in our Superloot drops full of merch, NFT's, crypto and more.
+                    Holders are able to get an Inkbox tattoo of their Superlotl’s tattoo design as part of the
+                    Superherd and soul-bounded designs for long-term members. We won’t share
+                    everything…but you’re going to want to make sure you join the Superherd early!
+                  </div>
+                </div>
+
+                <div class="accordion-item">
+                  <div class="accordion-title"> Is there going to be ongoing utility?</div>
+                  <div class="accordion-content">
+                    Yes! Some spoilers include and certainly are not limited to: access to exclusive Inkbox
+                    tattoo drops, Inkbox discounts and rewards based on the superpower of your tattoo, AR
+                    unlockables, getting real ink from the best tattoo artists in the world, free items and
+                    giveaways, access to top Web2 and Web3 related events, and much, much more!
                   </div>
                 </div>
 
@@ -365,59 +407,7 @@
                     When can I purchase my Superlotl?
                   </div>
                   <div class="accordion-content">
-                    Inkbox is the world leader in temporary tattoos and accessories, making us the ultimate
-                    self-expression tool. Learn more about us here.
-                  </div>
-                </div>
-
-
-                <div class="accordion-item">
-                  <div class="accordion-title">
-                    What makes real Axolotls super?
-                  </div>
-                  <div class="accordion-content">
-                    Inkbox is the world leader in temporary tattoos and accessories, making us the ultimate
-                    self-expression tool. Learn more about us here.
-                  </div>
-                </div>
-              </div>
-
-              <div class="accordion">
-                <div class="accordion-item">
-                  <div class="accordion-title">
-                    What is an NFT?
-                  </div>
-                  <div class="accordion-content">
-                    Inkbox is the world leader in temporary tattoos and accessories, making us the ultimate
-                    self-expression tool. Learn more about us here.
-                  </div>
-                </div>
-
-                <div class="accordion-item">
-                  <div class="accordion-title">How do I buy my first NFT?</div>
-                  <div class="accordion-content">
-                    Inkbox is the world leader in temporary tattoos and accessories, making us the ultimate
-                    self-expression tool. Learn more about us here.
-                  </div>
-                </div>
-
-                <div class="accordion-item">
-                  <div class="accordion-title">
-                    How does my Superlotl make super-impact?
-                  </div>
-                  <div class="accordion-content">
-                    Inkbox is the world leader in temporary tattoos and accessories, making us the ultimate
-                    self-expression tool. Learn more about us here.
-                  </div>
-                </div>
-
-                <div class="accordion-item">
-                  <div class="accordion-title">
-                    Is there going to be ongoing utility?
-                  </div>
-                  <div class="accordion-content">
-                    Inkbox is the world leader in temporary tattoos and accessories, making us the ultimate
-                    self-expression tool. Learn more about us here.
+                    Superlotls will hatch in Q1 2023.
                   </div>
                 </div>
 
@@ -426,8 +416,24 @@
                     How do I join the whitelist?
                   </div>
                   <div class="accordion-content">
-                    Inkbox is the world leader in temporary tattoos and accessories, making us the ultimate
-                    self-expression tool. Learn more about us here.
+                    Join our Discord *insert hyperlink to discord* and stay tuned for upcoming whitelist
+                    giveaways! There will be a lotl opportunities so be sure to get ready and join the
+                    Superherd early!
+                  </div>
+                </div>
+
+                <div class="accordion-item">
+                  <div class="accordion-title">
+                    What makes real Axolotls super?
+                  </div>
+                  <div class="accordion-content">
+                    The axolotl is native only to Lake Xochimilco in the Valley of Mexico and is known as one
+                    of the most unusual creatures in the natural world. They have inspiring real-life
+                    superpowers such as neoteny. Also known as the forever young condition, it means they
+                    never appear to age, they have the ability to regenerate their tail, limbs, spinal cord, and even
+                    their brain, and their genomes are 10x stronger than humans, making them remarkably
+                    insusceptible to cancer. These superpowers perfectly align with the powers your Superlotl
+                    will hodl!
                   </div>
                 </div>
 
@@ -436,8 +442,9 @@
                     What blockchain are these NFTs minted on?
                   </div>
                   <div class="accordion-content">
-                    Inkbox is the world leader in temporary tattoos and accessories, making us the ultimate
-                    self-expression tool. Learn more about us here.
+                    Superlotl NFTs are minted on ERC-721 compliant contracts deployed to the Ethereum
+                    blockchain. This is the "gold standard" and most widely-supported format for digital
+                    collectibles.
                   </div>
                 </div>
               </div>
@@ -465,7 +472,7 @@
                 <img src="./img/footer/instagram-logo.svg" alt="" />
                 <span>instagram</span></a>
             </div>
-            
+
             <div class="footer__block-wrapper">
               <div class="terms">
                 <a href="">TERMS & CONDITIONS</a>
