--- a/about.html
+++ b/about.html
@@ -11,32 +11,6 @@
   </head>
   <body>
     <div class="wrapper">
-      <section class="header">
-        <a href="/">
-          <img src="./img/main/header-logo.svg" alt="" class="header__logo" />
-        </a>
-        <div class="header__right-block">
-          <div class="header__nav">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">The Collection</a>
-            <a href="#">Mint</a>
-          </div>
-          <button class="header__button">
-            <div class="left-blok">
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
-            <div class="right-block">
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
-            <span>Sign in</span>
-          </button>
-        </div>
-      </section>
       <section class="about">
         <img src="./img/about/main/logo-bg.png" alt="" class="logo-bg" />
         <img src="./img/about/main/about-bg.png" alt="" class="about-bg" />
@@ -121,8 +95,16 @@
           alt=""
           class="charity-bg"
         />
-        <img src="./img/about/charity/charity-axolots1.png" alt="" class="charity-axolots1">
-        <img src="./img/about/charity/charity-axolots2.png" alt="" class="charity-axolots2">
+        <img
+          src="./img/about/charity/charity-axolots1.png"
+          alt=""
+          class="charity-axolots1"
+        />
+        <img
+          src="./img/about/charity/charity-axolots2.png"
+          alt=""
+          class="charity-axolots2"
+        />
         <div class="heart-container">
           <div class="heart-wrapper">
             <img src="./img/about/charity/heart.png" alt="" class="heart" />
@@ -158,6 +140,119 @@
               More updates on total impact raised and charity details coming
               soon!
             </p>
+          </div>
+        </div>
+      </section>
+      <section class="roadmap">
+        <div class="roadmap__container container">
+          <h2 class="roadmap__title">Superlotl Roadmap</h2>
+          <div id="vr" class="steap1">
+            <img
+              class="mask"
+              src="./img/about/roadmap/dark-sehloutte.png"
+              alt=""
+            />
+            <img
+              class="semirounds semirounds1"
+              src="./img/about/roadmap/semirounds.png"
+              alt=""
+            />
+            <img
+              class="semirounds semirounds2"
+              src="./img/about/roadmap/semirounds.png"
+              alt=""
+            />
+            <img
+              class="semirounds semirounds3"
+              src="./img/about/roadmap/semirounds.png"
+              alt=""
+            />
+            <img
+              class="vr-buble"
+              src="./img/about/roadmap/vr-bubble.gif"
+              alt=""
+            />
+            <img class="road" src="./img/about/roadmap/road.png" alt="" />
+            <img src="./img/about/roadmap/code.gif" alt="" class="code">
+            <div class="vr-text text1">
+              <p>
+                5000 Superlotls hatch on the blockchain, each with a unique 1/1
+                tattoo.
+              </p>
+              <p>
+                All 5000 tattoos are live on
+                <a href="inkbox.com">inkbox.com</a> and available for sale.
+              </p>
+              <p>
+                Launch rewards like IRL pop-ups, air drops, merch and much more!
+              </p>
+            </div>
+            <div class="vr-text text2">
+              <p>Ink the Metaverse.</p>
+              <p>
+                Inkbox creates a virtual tattoo shop experience where you can
+                enter, engage and ink your avatar.
+              </p>
+              <p>
+                Choose top art from the Superlotl collection, or customize your
+                Metaverse avatar with unique 1/1 designs.
+              </p>
+              <p>
+                Attend virtual and IRL events and unlock creative expression in
+                the Metaverse and beyond!
+              </p>
+            </div>
+            <div class="vr-text text3">
+              <p>What’s next for Inkbox in the Metaverse?</p>
+              <p>
+                Stay tuned to find out!
+              </p>
+            </div>
+            <div class="roadmap__navigation">
+              <div class="navigation__button-container">
+                <div class="background-button"></div>
+                <button class="navigation__button button1">Q1 2023</button>
+                <button class="navigation__button button2">Upcoming in 2023</button>
+                <button class="navigation__button button3">Beyond</button>
+              </div>
+              <svg
+                class="navigation__line"
+                width="721"
+                height="6"
+                viewBox="0 0 721 6"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <rect
+                  opacity="0.1"
+                  y="4"
+                  width="721"
+                  height="1"
+                  rx="0.5"
+                  fill="white"
+                />
+                <rect x="178" y="4" width="26" height="1" fill="#03010D" />
+                <rect x="349" y="4" width="26" height="1" fill="#03010D" />
+                <rect x="520" y="4" width="26" height="1" fill="#03010D" />
+                <path
+                  class="triangle1"
+                  d="M191 0L185 6H197L191 0Z"
+                  fill="#FF66C4"
+                />
+                <path
+                  class="triangle2"
+                  
+                  d="M362 0L356 6H368L362 0Z"
+                  fill="#1c1a25"
+                />
+                <path
+                  class="triangle3"
+                  
+                  d="M533 0L527 6H539L533 0Z"
+                  fill="#1c1a25"
+                />
+              </svg>
+            </div>
           </div>
         </div>
       </section>
