--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 
 <body>
   <div class="wrapper">
+    <section class="header">
+      <a href="#">
+        <img class="logo" src="./img/header/logo.png" alt="">
+      </a>
+    </section>
     <section class="main">
       <img src="./img/main/main-background.png" alt="" class="main__background" />
       <img src="./img/main/top-smoke.png" alt="" class="top-smoke" />
@@ -154,7 +159,7 @@
                   <div class="waterway-buble">
                     <div class="buble-container">
                       <img src="./img/waterway/bubble.png" alt="" class="buble" />
-                      <img src="./img/waterway/axolots.gif" alt="" class="axolots img1" />
+                      <img src="./img/waterway/tab-1.png" alt="" class="axolots img1" />
                       <img src="./img/waterway/tab-2.png" alt="" class="axolots img2" />
                       <img src="./img/waterway/tab-3.png" alt="" class="axolots img3" />
                       <img src="./img/waterway/tab-4.png" alt="" class="axolots img4" />
