--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/fonts.css" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/1920about.css" />
+    <link rel="stylesheet" href="./css/1024about.css" />
     <title>Document</title>
   </head>
   <body>
