--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/1920about.css" />
     <link rel="stylesheet" href="./css/1024about.css" />
     <link rel="stylesheet" href="./css/768about.css" />
+    <link rel="stylesheet" href="./css/375about.css" />
     <title>Document</title>
   </head>
   <body>
