--- a/about.html
+++ b/about.html
@@ -15,9 +15,31 @@
   <body>
     <div class="wrapper">
       <section class="header">
-        <a href="#">
+        <a class="logo-link" href="#">
           <img class="logo" src="./img/header/logo.png" alt="" />
         </a>
+        <div class="header__right-block">
+          <button class="open-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <div class="nav__wrapper">
+            <button class="close-menu">
+              <span></span>
+              <span></span>
+            </button>
+            <ul class="nav">
+            
+              <li><a href="#" class="item">home</a></li>
+              <li><a href="#" class="item">about</a></li>
+              <li><a href="#" class="item">superverse</a></li>
+              <li><a href="#" class="item">mint</a></li>
+            </ul>
+          </div>
+        
+        </div>
+
       </section>
       <section class="about">
         <img src="./img/about/main/logo-bg.png" alt="" class="logo-bg" />
